Fix toolbar alignment for MediaWiki version 1.31
Bug: T195802

--- a/MsUpload.css
+++ b/MsUpload.css
@@ -1,6 +1,8 @@
 #msupload-container {
 	display: inline-block;
 	padding: 3px;
+	line-height: normal;
+	vertical-align: middle;
 }
 
 #msupload-container.start-loading {
@@ -245,3 +247,4 @@
 #wikiEditor-section-advanced .options {
 	z-index: 1;
 }
+
